--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/stack": "^5.6.0",
     "expo": "~37.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.7.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
     "react-navigation-header-buttons": "^4.0.2",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.7.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
